Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <li>I read a lot! I am now working through Isaac Asimov's series</li>
 <li>I like building things - I just got an Arduino which will soon be managing my vertical blinds. I want to program it to open my blinds from 30 min before sunrise, slowly.</li>
 <li>I've just started learning the Violin. I've been wanting to play the Violin for ever.</li>
+<li>I also got an <a href="https://goo.gl/xWmyJG">Amazon Echo Dot</a> recently and am trying to wire everything up to it by having things emulate Belkin devices.</li>
 </ul>
       </section>
       <footer>
