Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p>On the personal front, I've been married happily for 6 years now. I have 2 young kids, both less than 5 years old, so life involves schedules and a lot of running around.</p>
 
 <h3>
-<a id="what-i-enjoy-doing-in-free-time" class="anchor" href="#what-i-enjoy-doing-in-free-time" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What I enjoy doing in free time</h3>
+<a id="what-i-enjoy-doing-in-my-free-time" class="anchor" href="#what-i-enjoy-doing-in-my-free-time" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What I enjoy doing in my free time</h3>
 
 <ul>
 <li>I read a lot! I am now working through Isaac Asimov's series</li>
